<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DiningRoomManager</string>
    <string name="e_mail"><![CDATA[E-Mail]]></string>
    <string name="et_email">Introduce tu email</string>
    <string name="passwd">Contraseña</string>
    <string name="etpasswd">Introduce tu contraseña</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    <string name="tvBienvenida">Hola %s, has conseguido ingresar a la aplicación</string>
    <string name="nombre">Nombre</string>
    <string name="etnombre">Introduce tu nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="etapellidos">Introduce tus apellidos</string>
    <string name="volver">Volver</string>
    <string name="cbacceptcredentials">He leído y acepto los términos y condiciones</string>
    <string name="termsAndConditions">
            1. Estos Términos y Condiciones de Uso regulan las reglas a que se sujeta la utilización de la APP\n \n
                DiningRoomManger (en adelante, la APP), que puede descargarse desde el dominio
                https://github.com/Samuel-SnD/DiningRoomManager. La descarga o utilización de la APP atribuye la condición de
                Usuario a quien lo haga e implica la aceptación de todas las condiciones incluidas en este documento.
                El Usuario debería leer estas condiciones cada vez que utilice la APP, ya que podrían ser modificadas en lo sucesivo.\n \n
            2. Cargos: eres responsable del pago de todos los costes o gastos en los que incurras como resultado de
                descargar y usar la Aplicación de Samuel, incluido cualquier cargo de red de operador o
                itinerancia. Consulta con tu proveedor de servicios los detalles al respecto.\n \n
            3. Estadísticas anónimas: Samuel se reserva el derecho a realizar un seguimiento de tu
                actividad en la Aplicación de y a informar de ello a nuestros proveedores de servicios estadísticos de
                terceros. Todo ello de forma anónima.\n \n
            4. Queda prohibido alterar o modificar ninguna parte de la APP a de los contenidas de la misma, eludir,
                desactivar o manipular de cualquier otra forma (o tratar de eludir, desactivar o manipular) las
                funciones de seguridad u otras funciones del programa y utilizar la APP o sus contenidos para un fin
                comercial o publicitario. Queda prohibido el uso de la APP con la finalidad de lesionar bienes,
                derechos o intereses de Samuel o de terceros. Queda igualmente prohibido realizar
                cualquier otro uso que altere, dañe o inutilice las redes, servidores, equipos, productos y programas
                informáticos de Samuel o de terceros.\n \n
            5. La APP y sus contenidos (textos, fotografías, gráficos, imágenes, tecnología, software, links,
                contenidos, diseño gráfico, código fuente, etc.), así como las marcas y demás signos distintivos son
                propiedad de Samuel o de terceros, no adquiriendo el Usuario ningún derecho sobre ellos
                por el mero uso de la APP. El Usuario, deberá abstenerse de:\n \n
                a) Reproducir, copiar, distribuir, poner a disposición de terceros, comunicar públicamente,
                    transformar o modificar la APP o sus contenidos, salvo en los casos contemplados en la ley o
                    expresamente autorizados por Samuel o por el titular de dichos derechos.\n \n
                b) Reproducir o copiar para uso privado la APP o sus contenidos, así como comunicarlos
                    públicamente o ponerlos a disposición de terceros cuando ello conlleve su reproducción.\n \n
                c) Extraer o reutilizar todo o parte sustancial de los contenidos integrantes de la APP.
    </string>
    <string name="eliminar_reserva">Eliminar reserva</string>
    <string name="generar_alerta_cv19">Generar alerta COVID-19</string>
    <string name="ver_reservas">Ver reservas</string>
    <string name="crear_nueva_mesa">Crear nueva mesa</string>
    <string name="eliminar_mesa">Eliminar mesa</string>
    <string name="menu">Menu</string>
    <string name="crear_reserva">Crear reserva</string>
    <string name="buscar">Buscar</string>
    <string name="mesa">Mesa:</string>
    <string name="asientos">Asientos:</string>
    <string name="day" tools:ignore="TypographyDashes">Día: (2022-05-25)</string>
    <string name="hora">Hora: (00:00)</string>
    <string name="reservar">Reservar</string>
    <string name="alerta_covid">Alerta Covid</string>
    <string name="dayrow2">Dia: </string>
    <string name="horaRow2">Hora: </string>
    <string name="idComedor">Id del comedor:</string>
    <string name="crear_mesa">Crear mesa</string>
    <string name="generar_pdf">Generar pdf</string>
    <string name="platos">Platos:</string>
    <string name="bebidas">Bebidas:</string>
    <string name="crear_menu">Crear Menu</string>
    <string name="eliminar_menu">Eliminar Menu</string>
    <string name="nombre_menu">Nombre del menú: (numérico)</string>
    <string name="tvplatos">Platos: ([\'ejemplo\', \'ejemplo2\'])</string>
    <string name="tvbebidas">Bebidas: ([\'ejemplo\', \'ejemplo2\'])</string>

</resources>