<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvemail"
        android:text="@string/e_mail"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etemail"
        android:textAlignment="center"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvpasswd"
        android:text="@string/passwd"
        android:textAlignment="center"
        android:imeOptions="actionNext"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etpasswd"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:hint="@string/etpasswd"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="2dp"
        app:strokeColor="@color/design_default_color_primary"
        android:id="@+id/btnRegister"
        android:text="@string/register"/>

</LinearLayout>