<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearMenu"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:id="@+id/tvNombreMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_menu"/>

    <EditText
        android:id="@+id/etNombreMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionNext"/>

    <TextView
        android:id="@+id/tvPlatosMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvplatos"/>

    <EditText
        android:id="@+id/etPlatosMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <TextView
        android:id="@+id/tvBebidasMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvbebidas"/>

    <EditText
        android:id="@+id/etBebidasMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <TextView
        android:id="@+id/tvComedorMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idComedor"/>

    <EditText
        android:id="@+id/etComedorMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionDone"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnCrearMenu"
        android:text="@string/crear_menu"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

</LinearLayout>