<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearMesa"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal" >

    <TextView
        android:id="@+id/tvAsientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asientos"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etAsientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionNext"/>

    <TextView
        android:id="@+id/tvidComedorMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idComedor"
        android:textSize="25sp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/etidComedorMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionDone"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnCrearMesa"
        android:text="@string/crear_mesa"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

</LinearLayout>