<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvReservaRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/mesa"/>

    <TextView
        android:id="@+id/tvIdMesaRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/tvReservaRow2"/>

    <TextView
        android:id="@+id/tvFechaRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dayrow2"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/tvIdMesaRow2"/>

    <TextView
        android:id="@+id/tvDiaRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/tvFechaRow2"
        android:maxLines="1"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvHora1Row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horaRow2"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/tvDiaRow2"/>

    <TextView
        android:id="@+id/tvHora2Row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/tvHora1Row2"
        android:maxLines="1"
        android:textSize="20sp"/>

</RelativeLayout>