<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearReserva"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal" >

    <TextView
        android:id="@+id/tvMesaActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/day"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hora"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnHacerReserva"
        android:text="@string/reservar"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

</LinearLayout>